--- a/.github/workflows/snyk-go.yml
+++ b/.github/workflows/snyk-go.yml
@@ -10,4 +10,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
+          args: --file=golang/go.mod
           command: monitor
