--- a/.github/workflows/snyk-go.yml
+++ b/.github/workflows/snyk-go.yml
@@ -10,5 +10,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --all-projects --file=path/to/go.mod
+          args: --all-projects
           command: monitor
